--- a/template/index.html
+++ b/template/index.html
@@ -13,13 +13,13 @@
 <div class="container py-4">
     <header class="pb-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            <span class="fs-4">Flask Auto Logs | Real time add logs from server to client side.</span>
+            <span class="fs-4">Flask Auto Logs | Real Time Add Logs From Server To Client Side.</span>
         </a>
     </header>
 
     <div class="p-5 mb-4 bg-light rounded-3">
-
         <button class="btn btn-primary" id="btn-start">Start Log Data</button>
+        <button class="btn btn-warning" id="btn-clear">Clear Log Data</button>
     </div>
 
     <div class="p-5 mb-4 bg-light rounded-3">
@@ -31,12 +31,16 @@
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"
             integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k"
             crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+            integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
 
-    const endpoint = window.location.href;
-    console.log(endpoint);
-    var socket = io(endpoint);
 
+    const endpoint = window.location.href;
+    var socket = io(endpoint);
 
     socket.on('my response', function(msg) {
        $('#log').scrollTop($('#log')[0].scrollHeight);
@@ -49,22 +53,34 @@
         });
     });
 
+    document.getElementById('btn-clear').addEventListener('click', function () {
+        document.getElementById('log').innerHTML = '';
+    });
+
     socket.on('button_action', function(msg) {
         if (msg.data === 'enable') {
             document.getElementById('btn-start').disabled = false;
+            document.getElementById('btn-clear').disabled = false;
+
+            swal("Process Completed!", "", "success");
+
         } else {
             document.getElementById('btn-start').disabled = true;
+            document.getElementById('btn-clear').disabled = true;
         }
     });
+
+
+
+
+
     </script>
     <footer class="pt-3 mt-4 text-muted border-top">
         &copy; 2022
     </footer>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
